// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not crash without data 1`] = `
<div
  class="shadow-small"
>
  <div
    class="jsx-3424239808 container"
  />
</div>
`;

exports[`should render a note component 1`] = `
<div
  class="shadow-small"
>
  <div
    class="jsx-3424239808 container"
  >
    <h4
      class="jsx-3424239808 title"
    >
      note title
    </h4>
    <p
      class="jsx-3424239808 content"
    >
      note content
    </p>
  </div>
</div>
`;
